--- a/JavaScriptLP/Exercicios/Ex01/assets/css/style.css
+++ b/JavaScriptLP/Exercicios/Ex01/assets/css/style.css
@@ -65,3 +65,13 @@ form button:hover {
 .bad {
   background: rgb(245, 73, 73);
 }
+
+.imc-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.coluna {
+  width: 50%;
+}
